--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#Junk
+.DS_Store
+.vscode/
+.idea/
+node_modules
+
 # Logs
 logs
 *.log
@@ -73,7 +79,7 @@ typings/
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
-.cache
+.parcel-cache
 
 # Next.js build output
 .next
