--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "dependencies": {
-    "axios": "^1.3.4"
+    "axios": "^1.3.4",
+    "notiflix": "^3.2.6",
+    "simplelightbox": "^2.13.0"
   }
 }
