--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "dependencies": {
     "axios": "^1.3.4",
+    "debounce": "^1.2.1",
     "notiflix": "^3.2.6",
     "simplelightbox": "^2.13.0"
   }
